# AutonomousDrivingTrajectoryPlanning

./: LICENSE  README.md  reade.md.txt
Cpp/CheckCollision/: AABB.cpp  AABB.hpp  CheckByAABB.cpp  CheckByAABB.hpp  CheckByArea.cpp  CheckByArea.hpp  CheckByCircle.cpp  CheckByCircle.hpp  CheckByLine.cpp  CheckByLine.hpp  CheckByMap.cpp  CheckByMap.hpp  CheckByOBB.cpp  CheckByOBB.hpp  Circumscribed_circle.cpp  Circumscribed_circle.hpp  Comparative_area.cpp  Comparative_area.hpp  OBB.cpp  OBB.hpp  main.cpp  mathstruct.cpp  mathstruct.h
Cpp/ConvertPathToTrajectory/PlanSpeedForDynamicScenarios/: CMakeLists.txt  GenerateDynamicObstacles_unstructured.cpp  GenerateDynamicObstacles_unstructured.h  H.txt  PlanSpeedForDynamicScenarios.cpp  PlanSpeedForDynamicScenarios.h  README.md  cpp_header.h  global_structs.h  main.cpp
Cpp/ConvertPathToTrajectory/PlanSpeedForStaticScenarios/: TransformP2T.cpp
Cpp/Planners/Curvesbased/: CMakeLists.txt
Cpp/Planners/Curvesbased/include/: TransformP2T.h  Visualize.h  bezier.h  mathstruct.h  vec2d.h
Cpp/Planners/Curvesbased/src/: PlanPRMPath.cpp  bezier.cpp  vec2d.cpp
Cpp/Planners/Graphbased/: Visualize.cpp  main.cpp  mathstruct.h  test.cpp  vec2d.cpp
Cpp/Planners/Graphbased/SimpleStateLattice/: .gitignore  CMakeLists.txt  README.md  Visualize.cpp  Visualize.h  actions.h  actions_.txt  insert_points.txt  main.cpp  mathstruct.cpp  mathstruct.h  state_lattice.bc  state_lattice.cpp  state_lattice.h  state_lattice.ii  state_lattice.s  state_lattice_planner.cpp  state_lattice_planner.h  vec2d.h  vis_api.cpp  vis_api.h  x.txt  y.txt
Matlab/CheckCollision/: CheckByAABB.m  CheckByArea.m  CheckByCircle.m  CheckByLine.m  CheckByMap.m  CheckByOBB.m  main_comparecheck.m
Matlab/ConvertPathToTrajectory/: GenerateDynamicObstacles_unstructured.m  PlanSpeedForDynamicScenario.m  main.m
Matlab/Planners/: DynamicWindowApproachSample.m  main_compare_dynamic_structured.m  main_compare_initial.m  main_compare_robot_car.m  main_compare_static_unstructured.m  main_test_one_planner.m
Matlab/Planners/Curvesbased/: PlanBezierPath.m  PlanPRMPath.m  PlanSpeedForStaticScenario.m  base.m  collisioncheck.m  computeQM.m  getAbeq.m  getAbieq.m  getcorridor.m  main.m
Matlab/Planners/Graphbased/: CheckByMap.m  PlanAStarPath.m  PlanHybridAStarPath.m  main.m  main_compareplanner.m
Matlab/Planners/Learningbased/: CheckByMap.m  Main.m  PlanAStarPath.m  PlanL1SCPTrajectory.m  PlanL2SCPTrajectory.m  PlanSCPTrajectory.m  main_astar_vs_optimization.m  main_compare_theta_learning.m  main_generate.m  main_generate_lisan.m  main_generate_theta.m  main_process.m  main_test_learning.m  main_theta.m  matlab.mat  test.m
Matlab/Planners/Optimizationbased/: Main.m  PlanCFSPath.m  PlanL1SCPTrajectory.m  PlanL2SCPTrajectory.m  PlanSCPTrajectory.m  main_compare_SCP.m
Python/CheckCollision/: CheckByAABB.py  CheckByArea.py  CheckByCircle.py  CheckByLine.py  CheckByMap.py  CheckByOBB.py  globalvar.py  main_unstructure.py
Python/ConvertPathToTrajectory/: GenerateDynamicObstacles_unstructured.py  PlanSpeedForDynamicScenarios.py  TransformPathToTrajectory.py  global_config.py  main.py  save_video.py
Python/Planners/Curvesbased/: Bezier.py  PlanPRMPath.py  corridor.py  globalvar.py  nearestPD.py  test.py
Python/Planners/Optimizationbased/: PlanOptimizationL1Trajectory.py  PlanOptimizationL2Trajectory.py  globalvar.py  main_unstructure.py  matlab.mat  theta.txt  x.txt  (+2 more)
(+21486 files in other folders)
